WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262144
REGRESSION (
268069@main
): Date picker fails to present when switching focus from a text field to a date input
https://bugs.webkit.org/show_bug.cgi?id=262144
Summary
REGRESSION (268069@main): Date picker fails to present when switching focus f...
Wenson Hsieh
Reported
2023-09-26 14:55:46 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-27 09:59:14 PDT
<
rdar://problem/116126976
>
Wenson Hsieh
Comment 2
2023-09-27 10:00:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18289
EWS
Comment 3
2023-09-27 12:06:15 PDT
Committed
268526@main
(05c27ae25006): <
https://commits.webkit.org/268526@main
> Reviewed commits have been landed. Closing PR #18289 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug